--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Classes\frmAddEditClass.Designer.cs">
       <DependentUpon>frmAddEditClass.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\frmClassesAreTaughtByTeacher.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\frmClassesAreTaughtByTeacher.Designer.cs">
+      <DependentUpon>frmClassesAreTaughtByTeacher.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\frmFindClass.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -366,6 +372,9 @@
     </Compile>
     <EmbeddedResource Include="Classes\frmAddEditClass.resx">
       <DependentUpon>frmAddEditClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\frmClassesAreTaughtByTeacher.resx">
+      <DependentUpon>frmClassesAreTaughtByTeacher.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\frmFindClass.resx">
       <DependentUpon>frmFindClass.cs</DependentUpon>
