--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -80,6 +80,12 @@
     <Compile Include="Classes\frmListClasses.Designer.cs">
       <DependentUpon>frmListClasses.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\frmShowAllActiveGroupsInClass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\frmShowAllActiveGroupsInClass.Designer.cs">
+      <DependentUpon>frmShowAllActiveGroupsInClass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\frmShowClassInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -387,6 +393,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\frmListClasses.resx">
       <DependentUpon>frmListClasses.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\frmShowAllActiveGroupsInClass.resx">
+      <DependentUpon>frmShowAllActiveGroupsInClass.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\frmShowClassInfo.resx">
       <DependentUpon>frmShowClassInfo.cs</DependentUpon>
