ADD a Form to Add or Edit a Meeting Time

--- a/StudyCenter/App.config
+++ b/StudyCenter/App.config
@@ -7,9 +7,18 @@
 
 	<appSettings>
 		<add key="ProjectName" value="StudyCenter" />
+		
 		<add key="MaxPersonAge" value="100" />
 		<add key="MinPersonAge" value="10" />
+		
 		<add key="RowsPerPage" value="10" />
+		
+		<add key="DailyLectureDurationInHour" value="1"/>
+		<add key="STTLectureDurationInHour" value="1.5"/>
+		<add key="MWLectureDurationInHour" value="2"/>
+		
+		<add key="StudyCenterOpeningTime" value="08:00 AM"/>
+		<add key="StudyCenterClosingTime" value="11:00 PM"/>
 	</appSettings>
 
 	<connectionStrings>
