--- a/StudyCenter/StudyCenterUI.csproj
+++ b/StudyCenter/StudyCenterUI.csproj
@@ -182,6 +182,12 @@
     <Compile Include="MainMenu\frmMainMenu.Designer.cs">
       <DependentUpon>frmMainMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="MeetingTimes\frmAddEditMeetingTime.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MeetingTimes\frmAddEditMeetingTime.Designer.cs">
+      <DependentUpon>frmAddEditMeetingTime.cs</DependentUpon>
+    </Compile>
     <Compile Include="People\frmAddEditPerson.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -441,6 +447,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenu\frmMainMenu.resx">
       <DependentUpon>frmMainMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MeetingTimes\frmAddEditMeetingTime.resx">
+      <DependentUpon>frmAddEditMeetingTime.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="People\frmAddEditPerson.resx">
       <DependentUpon>frmAddEditPerson.cs</DependentUpon>
