UPD frmGetAllTeachersTeachSubject to include a feature for adding a teacher

--- a/StudyCenterDesktopUI/StudyCenterDesktopUI.csproj
+++ b/StudyCenterDesktopUI/StudyCenterDesktopUI.csproj
@@ -881,5 +881,8 @@
   <ItemGroup>
     <None Include="Resources\password-64.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add-teacher.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
