feat: Implement validation helper class for business layer entities
Implemented a validation helper class, clsValidationHelper, within the business layer to centralize and streamline validation logic across various entities including clsClass, clsPerson, clsStudent, etc.

- Introduced _ValidateUsingHelperClass method in each entity class to utilize clsValidationHelper.Validate method for validation checks.
- Enhanced readability and maintainability by centralizing validation logic and reducing code duplication.
- Added detailed XML comments to document the purpose and functionality of the validation methods.
- Ensured consistent validation behavior across different entities and modes (AddNew, Update).

This change improves code organization, promotes reusability, and enhances clarity in validation procedures within the business layer.

--- a/StudyCenterBusiness/StudyCenterBusiness.csproj
+++ b/StudyCenterBusiness/StudyCenterBusiness.csproj
@@ -57,6 +57,7 @@
     <Compile Include="clsTeacher.cs" />
     <Compile Include="clsTeacherDeleted.cs" />
     <Compile Include="clsUser.cs" />
+    <Compile Include="clsValidationHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
